Fix weekday/calendar alignment

--- a/src/style/flatpickr_base.styl
+++ b/src/style/flatpickr_base.styl
@@ -45,7 +45,7 @@ $width = 256px
 	&.hasWeeks
 		width $width + 32px
 		.flatpickr-weekdays span
-			padding 0 2.7%
+			width 12.5%
 
 	&:before, &:after
 		position absolute
@@ -122,7 +122,7 @@ $width = 256px
 		color $weekdays_color
 		text-align center
 		display inline-block
-		padding 0 3.11%
+		width 14.29%
 		font-weight bold
 
 .flatpickr-weeks
